--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -38,6 +38,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -68,6 +69,7 @@
     <Compile Include="CS7_3.cs" />
     <Compile Include="CS8_0.cs" />
     <Compile Include="ExtensionClass.cs" />
+    <Compile Include="GoogleTranslatorTest.cs" />
     <Compile Include="IInterface.cs" />
     <Compile Include="InheritDoc.cs" />
     <Compile Include="MyEnum.cs" />
@@ -84,6 +86,12 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Codist\Codist.csproj">
+      <Project>{357d8f0c-57b1-4981-949d-204fee0ec424}</Project>
+      <Name>Codist</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
